--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -13,6 +13,7 @@
 \usepackage{array}
 \usepackage{pgf,tikz}
 \usepackage{subfig}
+\usepackage{verbatim}
 \usetikzlibrary{arrows}
 \usepackage{pgf,tikz}
 
