Add beginning of chapter 8 : algorithms

--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -478,6 +478,7 @@ Cette seconde implémentation a pour but de réutiliser les composantes Nodes (u
 \section{Autres applications}
 \
 
+\include{chapitre8}
 \include{chapitre9}
 
 \end{document}
