Add a section in chapter 6

--- a/chapitre5.tex
+++ b/chapitre5.tex
@@ -281,6 +281,12 @@ V & 0.00 & 0.00 & 0.01 & 0.02 & 0.02 & 0.00 & 0.97 \\
 \end{tabular}
 \end{center}
 
+\begin{figure}
+\begin{center}
+\includegraphics[scale=0.4]{images/chapter5/rtrl_bptt.png}
+\end{center}
+\end{figure}
+
 \section{Problème des dépendances temporelles}
 
 \label{dependances_temporelles}
