--- a/chapitre3.tex
+++ b/chapitre3.tex
@@ -124,6 +124,8 @@ La formule \ref{retropropagation_graphe} nous permet de décrire un algorithme d
 
 \section{N\oe{}uds}
 
+\label{comp_graph_part}
+
 Maintenant que les graphes de calculs ont été présentés de manière théorique, nous allons dans la suite présenter de manière plus pratique comment nous les avons implémentés.
 
 \subsection{La classe Node}
