--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -317,167 +317,7 @@ Nous pouvons alors distinguer trois cas reflétant les principaux comportements 
 \end{itemize}
 
 \include{chapitre5}
-
-\chapter{Long Short-Term Memory (LSTM)}
-\section{Motivation}
-Les réseaux de neurones récurrents étudiés jusqu'alors permettent effectivement d'apprendre des suites de séquences. Néanmoins, on observe un phénomène d'oubli se caractérisant par une faible influence des plus vieilles informations sur la sortie actuelle.
-
-Cela est dû à la rétropropagation du gradient. En effet, celle-ci est basée sur la règle de la chaîne qui fait donc apparaître un produit de dérivées de fonctions d'activation. Or si ces dérivées sont supérieures à 1, cette partie du gradient rétropropagé risque d'exploser. A l'inverse, si elles sont inférieures à 1, comme c'est le cas pour la sigmoide dont la dérivée a une valeur maximale de 0
-25, cette partie du gradient tend à disparaître lorsque l'on remonte loin dans le temps. Ainsi, on perd la dépendance à long terme.
-
-Nous travaillions jusque là avec des réseaux récurrents comme celui présenté sur la figure \ref{RNN classique} composé d'une simple couche de tangentes hyperboliques.
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.25]{images/RNN_classique.png}
-\caption{Dépliage d'un RNN classique}
-\label{RNN classique}
-\end{center}
-\end{figure}
-
-Dans le cadre des LSTM, nous utilisons une nouvelle cellule de base afin d'éviter cette disparition du gradient lors de la rétropropagation.
-
-\newpage
-
-\section{Principe de fonctionnement}
-Comme pour les réseaux récurrents, on peut déplier les LSTM afin de se ramener à une cellule de base qui se répète. Le principe des LSTM repose sur l'existence d'un état qui apparaît tout en haut de la cellule et qui subit seulement quelques modifications linéaires. Cela permettra ainsi, lors de la rétropropagation du gradient, de ne pas perdre la dépendance avec les informations lointaines.
-
-La cellule de base des LSTM peut donc être représentée par la figure suivante.
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.12]{images/LSTM_article_plusieurscell.png}
-\caption{Cellule élémentaire des LSTM}
-\label{cellule LSTM}
-\end{center}
-\end{figure}
-
-Cette figure permet de représenter facilement le réseau en utilisant la structure d'un graphe de calcul. Il faut cependant bien distinguer les fonctions tanh et sigmoide qui symbolisent une couche entière de neurones (dans les rectangles jaunes) et la fonction tanh (dans le cercle rose) qui s'applique à chaque élément du vecteur en entrée. De même, les multiplications dans les cercles roses se font terme à terme.
-
-Les poids à régler lors de l'apprentissage se situent au niveau de chaque couche de neurones sigmoide et tanh. Il est à noter que lorsque l'on déplie la cellule LSTM dans le temps, les poids sont les mêmes d'une cellule à l'autre. Le fait qu'ils soient ainsi partagés sera important pour l'implémentation.
-
-On peut distinguer plusieurs parties dans la cellule LSTM qui possèdent chacune une fonction particulière.
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.2]{images/LSTM_article_gates.png}
-\caption{Différentes parties d'une cellule LSTM}
-\label{cellule LSTM gates}
-\end{center}
-\end{figure}
-
-Le cell state S correspond à la mémoire de la cellule. Celle-ci subit peu de modification au cours du temps, correspondant à l'ajout d'information dans la mémoire.
-
-Les sigmoides permettent d'obtenir des sorties comprises entre 0 et 1. On peut donc pondérer l'importance d'une valeur en la multipliant par la sortie d'une sigmoïde. Si la sortie de la sigmoide est proche de 1, cela signifie que l'on garde la valeur, en revanche, si celle-ci est proche de 0, on oublie la valeur calculée.
-
-Ainsi on calcule un vecteur i à partir de l'entrée et de la sortie précédente à l'aide d'une couche de tanh. Puis, on le multiplie terme à terme par le vecteur de sortie g d'une couche de sigmoides appelée input gate afin de sélectionner les informations que l'on souhaite conserver. Enfin, on ajoute ces informations sélectionnées dans le cell state. 
-
-La sortie de la cellule est obtenue à partir du cell state auquel on applique une tanh. Enfin, on sélectionne les informations que l'on veut garder en sortie à l'aide d'une couche de sigmoides appelée output gate appliquée à l'entrée.
-
-
-En pratique, on n'est pas sûr qu'une cellule LSTM suive effectivement le principe décrit précédemment. Celui-ci est plutôt une illustration afin de comprendre de manière générale le fonctionnement des LSTM.
-
-La structure d'une cellule LSTM n'est pas non figée. En effet, il est possible de l'adapter en ajoutant, enlevant certains éléments, gates. Par exemple, on peut ajouter une forget gate composée d'une couche de sigmoides au début de la cellule. On multiplie la sortie de cette forget gate afin de garder, supprimer, réduire certaines composantes du cell state. 
-
-\break
-
-Dans le cas d'une cellule LSTM, les équations de propagation sont simples à calculer. En effet, comme pour le graphe de calcul, les équations sont directement données par le schéma.
-
-Pour la bakcpropagation du gradient, il est toutefois nécessaire de calculer les formules à utiliser dans l'algorithme. La figure \ref{cellule LSTM gradient} fait apparaître le gradient à chaque endroit de la cellule.
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.3]{images/LSTM_gradient.png}
-\caption{Cellule LSTM}
-\label{cellule LSTM gradient}
-\end{center}
-\end{figure}
-
-
-En utilisant, BPTT pour rétropropager le gradient sur le graphe du LSTM déplié, on obtient les formules suivantes :
-
-\begin{equation}
-\varepsilon_{S(t-1)} = \frac{\partial J}{\partial S(t)} = \varepsilon_{S(t)} + F_{l}^{\prime}\text{diag}(o)\frac{\partial J}{\partial H(t)}
-\end{equation}
-
-\begin{equation}
-\varepsilon_{H(t-1)} = \left((W_{g}^{T}F_{g}^{\prime}\text{diag}(i) + W_{i}^{T}F_{i}^{\prime}\text{diag}(g))\frac{\partial J}{\partial S(t)} + W_{o}^{T}F_{o}^{\prime}\text{diag}(l)\frac{\partial J}{\partial H(t)}\right)_{1,...,n}
-\end{equation}
-
-avec :
-
-\[
-F_{l}^{\prime} = \text{diag}((1 - l_{i}^{2})_{i=1,...,n})
-\]
-
-\[
-F_{i}^{\prime} = \text{diag}((1 - i_{i}^{2})_{i=1,...,n})
-\]
-
-\[
-F_{g}^{\prime} = \text{diag}((g_{i}(1 - g_{i}))_{i=1,...,n})
-\]
-
-\[
-F_{o}^{\prime} = \text{diag}((o_{i}(1 - o_{i}))_{i=1,...,n})
-\]
-
-
-Il est alors possible de calculer le gradient relatif à chaque matrice de poids.
-
-\begin{equation}
-\frac{\partial J}{\partial W_{o}}=
-\begin{pmatrix}
-H(t-1) \\
-x(t)
-\end{pmatrix}
-\left(F_{o}^{\prime}\text{diag}(l)\frac{\partial J}{\partial H(t)}\right)^{T}
-\end{equation}
-
-\begin{equation}
-\frac{\partial J}{\partial W_{i}}=
-\begin{pmatrix}
-H(t-1) \\
-x(t)
-\end{pmatrix}
-\left(F_{i}^{\prime}\text{diag}(g)\frac{\partial J}{\partial S(t)}\right)^{T}
-\end{equation}
-
-\begin{equation}
-\frac{\partial J}{\partial W_{g}}=
-\begin{pmatrix}
-H(t-1) \\
-x(t)
-\end{pmatrix}
-\left(F_{g}^{\prime}\text{diag}(i)\frac{\partial J}{\partial S(t)}\right)^{T}
-\end{equation}
-
-On rétropropage le gradient dans tout le graphe déplié avec les formules précédentes. Celui-ci est à chaque fois accumulé au niveau des poids. Les poids $W_{o}$, $W_{i}$ et $W_{g}$ sont alors mis à jour avec la formule :
-
-\begin{equation}
-W = W - \eta \sum{\frac{\partial J}{\partial W}}
-\end{equation} 
-
-\section{Première Implémentation}
-
-Une première implémentation des LSTM a été réalisé en conservant le plus possible le concept de cellule indépendante. Ainsi une classe Weights contient tous les poids de la cellule et la classe Lstmcell se contentera elle de calculer la propagation et la rétropropagation (Voir Figure 4.4 de la cellule LSTM pour situer les poids).
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.8]{images/UML_LSTM_Implementation_1.png}
-\caption{Diagramme UML de la cellule LSTM}
-\label{cellule LSTM UML 1}
-\end{center}
-\end{figure}
-
-\section{Implémentation avec des nœuds}
-
-Cette seconde implémentation a pour but de réutiliser les composantes Nodes (utilisées dans les réseaux simples) afin d'optimiser les calculs et de faciliter la mise en pipeline de plusieurs cellules LSTM les unes derrières les autres.
-
-\section{Résultats}
-\section{Autres applications}
-\
-
+\include{chapitre6}
 \include{chapitre8}
 \include{chapitre9}
 
