--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -16,6 +16,7 @@
 \usepackage{verbatim}
 \usetikzlibrary{arrows}
 \usepackage{pgf,tikz}
+\usepackage{hyperref}
 
 \theoremstyle{plain}
 \newtheorem{proposition}{Proposition}
@@ -320,5 +321,10 @@ Nous pouvons alors distinguer trois cas reflétant les principaux comportements 
 \include{chapitre6}
 \include{chapitre8}
 \include{chapitre9}
+
+\nocite{*}
+
+\bibliographystyle{plain}
+\bibliography{compte-rendu.bib}
 
 \end{document}
