--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -476,7 +476,7 @@ Cette seconde implémentation a pour but de réutiliser les composantes Nodes (u
 
 \section{Résultats}
 \section{Autres applications}
-\
+\include{chapitre7}
 
 \include{chapitre8}
 \include{chapitre9}
