--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -319,6 +319,7 @@ Nous pouvons alors distinguer trois cas reflétant les principaux comportements 
 
 \include{chapitre5}
 \include{chapitre6}
+\include{chapitre7}
 \include{chapitre8}
 \include{chapitre9}
 
