--- a/chapitre5.tex
+++ b/chapitre5.tex
@@ -281,7 +281,13 @@ V & 0.00 & 0.00 & 0.01 & 0.02 & 0.02 & 0.00 & 0.97 \\
 \end{tabular}
 \end{center}
 
-\begin{figure}
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.4]{images/chapter5/learning_curve_rtrl_reber_sequence.png}
+\end{center}
+\end{figure}
+
+\begin{figure}[h!]
 \begin{center}
 \includegraphics[scale=0.4]{images/chapter5/rtrl_bptt.png}
 \end{center}
