add introduction + correct reference

--- a/chapitre1.tex
+++ b/chapitre1.tex
@@ -209,7 +209,7 @@ Il existe certaines classes particulière de réseau de neurones. Tout d'abord, 
 \end{center}
 \end{figure}
 
-Dans les sections suivantes, seront étudiés les algorithmes pour évaluer un réseau de neurones puis pour l’entraîner. Cependant, seulement les algorithmes dans le cadre d'un réseau de neurones feedforward seront abordés. Les algorithmes concernant les réseaux de neurones récurrent seront abordés dans la partie ??.
+Dans les sections suivantes, seront étudiés les algorithmes pour évaluer un réseau de neurones puis pour l’entraîner. Cependant, seulement les algorithmes dans le cadre d'un réseau de neurones feedforward seront abordés. Les algorithmes concernant les réseaux de neurones récurrent seront abordés dans la partie \autoref{chap:Réseaux de neurones récurrents}.
 
 \section{Propagation}
 
