--- a/chapitre5.tex
+++ b/chapitre5.tex
@@ -1,5 +1,5 @@
 \chapter{Réseaux de neurones récurrents}
-
+\label{chap:Réseaux de neurones récurrents}
 \section{Motivation}
 
 Nous avons pu voir que les réseaux feedforward peuvent être utilisés afin d'appendre à prédire la sortie voulue en fonction de l'entrée du réseau. 
