--- a/chapitre5.tex
+++ b/chapitre5.tex
@@ -281,9 +281,12 @@ V & 0.00 & 0.00 & 0.01 & 0.02 & 0.02 & 0.00 & 0.97 \\
 \end{tabular}
 \end{center}
 
-\begin{figure}
+\begin{figure} [h!]
 \begin{center}
 \includegraphics[scale=0.4]{images/chapter5/rtrl_bptt.png}
+\caption{Résultats des algorithmes BPTT (rouge) et RTRL (bleu) sur l'apprentissage d'une grammaire de Reber symétrique, moyenné sur 100 essais}
+\ref{Reber_Sym_RTRL_BPTT}
+\label{BPTT_RTRL_Reber_Sym}
 \end{center}
 \end{figure}
 
