--- a/chapitre6.tex
+++ b/chapitre6.tex
@@ -142,6 +142,8 @@ W = W - \eta \sum{\frac{\partial J}{\partial W}}
 
 Une première implémentation des LSTM a été réalisé en conservant le plus possible le concept de cellule indépendante. Ainsi une classe Weights contient tous les poids de la cellule et la classe Lstmcell se contentera elle de calculer la propagation et la rétropropagation (Voir Figure 4.4 de la cellule LSTM pour situer les poids).
 
+Si cette implémentation intuitive fonctionne et donne des résultats satisfaisants, elle n'est cependant pas très adapté à la création de réseaux de cellules LSTM. C'est pour cela que nous nous sommes lancés dans une seconde implémentation, plus pratique et flexible.
+
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[scale=0.8]{images/chapter6/UML_LSTM_Implementation_1.png}
@@ -181,4 +183,21 @@ La figure \ref{lstm_node_micro} présente les n\oe{}uds qui composent la cellule
 Grâce à cette architecture nous avons pu tester différentes variantes de la cellule LSTM : avec ou sans forget gate. Mais surtout, nous avons considérablement augmenté la puissance de notre librairie en permettant de créer des n\oe{}uds à partir d'autres n\oe{}uds ce qui permet de créer des modèles beaucoup plus complexes.
 
 \section{Résultats}
-\section{Autres applications}
+
+Nous avons donc pu soumettre des cellules LSTM à l'apprentissage de la grammaire symétrique de Reber. 
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.5]{images/chapter6/LSTM_Reber_Sym.png}
+\caption{Résultats de l'apprentissage de la grammaire de Reber symétrique pour une cellule LSTM, moyenné sur 100 essais
+\ref{lsmt_reber_sym}}
+\label{Reber_Sym_LSTM}
+\end{center}
+\end{figure}
+
+Sur la courbe de la figure \ref{Reber_Sym_LSTM} , il évident qu'une cellule LSTM seule peut apprendre parfaitement une grammaire de Reber symétrique, ce qui n'était pas le cas des réseaux de neurones simples utilisant les algorithmes RTRL et BPTT. En effet ces réseaux ne pouvaient que prédire la moitié des transitions (voir la courbe \ref{Reber_Sym_RTRL_BPTT} ).
+
+Les LSTM peuvent donc apprendre parfaitement une grammaire de Reber au contraire des deux algorithmes appliqués à des réseaux récurrents simples. On peut aussi noter que que l'apprentissage se fait très rapidement et de manière efficace. Les oscillations sont moins conséquentes et surtout il n'y a pas de palier, ce qui montre l'efficacité de l'apprentissage.
+
+
+Cela montre bien la force des LSTM qui peuvent donc prendre en compte de manière efficace le contexte afin de prédire une suite à ce contexte. C'est dans ce cadre là que nous nous sommes penchés vers la génération de séquence afin de pouvoir vraiment tester les possibilités offertes par celles-ci.
